force-app/main/default/objects/UBO__c/UBO__c.object-meta.xml
<CustomObject>
    <label>UBO</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UBO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>