force-app/main/default/objects/UBO__c/fields/Active_Government__c.field-meta.xml
<CustomField>
    <fullName>Active_Government__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>