force-app/main/default/objects/UBO__c/fields/Are_you_considered_PEPs__c.field-meta.xml
<CustomField>
    <fullName>Are_you_considered_PEPs__c</fullName>
    <label>Are you considered PEPs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>