force-app/main/default/objects/UBO__c/fields/City_Government__c.field-meta.xml
<CustomField>
    <fullName>City_Government__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>