force-app/main/default/objects/UBO__c/fields/Country_of_Residence_Government__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence_Government__c</fullName>
    <label>Country of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>