force-app/main/default/objects/UBO__c/fields/Country_of_Tax_Residence_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Tax_Residence_Corporate__c</fullName>
    <label>Country of Tax Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>