force-app/main/default/objects/UBO__c/fields/Date_of_Birth_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Corporate__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>