force-app/main/default/objects/UBO__c/fields/Expiry_Date_Government__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Government__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>