force-app/main/default/objects/UBO__c/fields/Is_UBO_acting_as_a_nominee_for_any_other__c.field-meta.xml
<CustomField>
    <fullName>Is_UBO_acting_as_a_nominee_for_any_other__c</fullName>
    <label>Is UBO acting as a nominee for any other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>