force-app/main/default/objects/UBO__c/fields/Proof_of_Identity_Comment__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Identity_Comment__c</fullName>
    <label>Proof of Identity Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>