force-app/main/default/objects/UBO__c/fields/Proof_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Residence__c</fullName>
    <label>Proof of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document</valueSetName>
    </valueSet>
</CustomField>