force-app/main/default/objects/UBO__c/fields/Shares_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Shares_Corporate__c</fullName>
    <label>% Shares</label>
    <length>255</length>
    <type>Text</type>
</CustomField>