force-app/main/default/objects/UBO__c/fields/Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth__c</fullName>
    <label>Source of Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Ownership/Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Investments (Stocks, Bonds, Real Estate, etc.)</fullName>
            </value>
            <value>
                <fullName>Inheritance or Family Wealth</fullName>
            </value>
            <value>
                <fullName>Employment/Professional Income</fullName>
            </value>
            <value>
                <fullName>Sale of Business/Assets</fullName>
            </value>
            <value>
                <fullName>Professional Services/Consulting Fees</fullName>
            </value>
            <value>
                <fullName>Government Positions/Salaries</fullName>
            </value>
            <value>
                <fullName>Entertainment/Sports/Media</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>