force-app/main/default/objects/UBO__c/fields/State_Province_Government__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Government__c</fullName>
    <label>State/Province (if applicable):</label>
    <length>255</length>
    <type>Text</type>
</CustomField>