force-app/main/default/objects/UBO__c/fields/Street_Address_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_Corporate__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>