force-app/main/default/objects/UBO__c/fields/Type_of_Control_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Control_Corporate__c</fullName>
    <label>Type of Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Settlor of trust</fullName>
            </value>
            <value>
                <fullName>Beneficiary of trust</fullName>
            </value>
            <value>
                <fullName>Family connections</fullName>
            </value>
            <value>
                <fullName>Contractual connections</fullName>
            </value>
            <value>
                <fullName>Management Board</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>